# deer-flow

./: .gitignore  .gitmodules  config.yaml
backend/: CLAUDE.md  WEBHOOK_SETUP.md  pyproject.toml  setup_gmail_watch.py  start_webhook.bat  start_webhook.sh  webhook_receiver.py
backend/.deer-flow/: SOUL.md  memory.json
backend/app/channels/: manager.py  manager_helpers.py  slack.py  store.py
backend/app/gateway/: app.py  config.py  cron_supervisor.py  metrics.py
backend/scripts/: _add_cico_panels.py  _add_roll_rate_and_cico.py  _dashboard_polish.py  _dashboard_polish2.py  _fix_oversize_images_in_thread.py  _fix_roll_rate_and_covenant_panels.py  _fix_roll_rate_order.py  _fix_roll_rate_order2.py  _fix_roll_rate_order3.py  _insert_covenant_panels.py  _screenshot_dashboard.py  _screenshot_roll_rate.py  _update_roll_rate_panels.py  backup_state.py  bot_dm_history_cron.py  cancel_run.py  cap_markets_metrics_refresh.py  cap_markets_metrics_writer.py  check_pipeline.py  check_pipeline2.py  checkpoint_cleanup_cron.py  cico_cash_extract.py  cico_cash_extract.py.bak_20260609  cleanup_checkpoints.py  cm_credit_health_app.py  cm_morning_brief.py  fix_bb_cap.py  gmail_watch_renew_cron.py  idle_thread_cleanup_cron.py  langgraph_pty_watchdog.py  memory_derive.py  migrate_to_mem0.py  seed_real_metrics.py
backend/tests/: test_anthropic_retry_middleware.py  test_app_config_reload.py  test_artifacts_router.py  test_backup_state.py  test_channel_file_attachments.py  test_channels.py  test_client_live.py  test_cm_dashboard_import_safe.py  test_continuation_middleware.py  test_credential_loader.py  test_cron_supervisor.py  test_gateway_handlers_sync.py  test_lead_agent_model_resolution.py  test_loop_detection_middleware.py  test_mem0_injection_middleware.py  test_memory_derive.py  test_memory_storage.py  test_memory_updater.py  test_metrics_thread_status.py  test_morning_brief.py  test_p1_cron_correct_state.py  test_proposal_backfill.py  test_skill_utils.py  test_sll.py  test_step_budget_middleware.py  test_stuck_run_monitor.py
(+114 files in other folders)
