[project]
name = "deer-flow"
version = "0.1.0"
description = "LangGraph-based AI agent system with sandbox execution capabilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deerflow-harness",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.20",
    "sse-starlette>=2.1.0",
    "uvicorn[standard]>=0.34.0",
    "lark-oapi>=1.4.0",
    "slack-sdk>=3.33.0",
    "python-telegram-bot>=21.0",
    "langgraph-sdk>=0.1.51",
    "markdown-to-mrkdwn>=0.3.1",
    "playwright>=1.50.0",
    "prometheus-client>=0.20.0",
    # In-process cron dependencies. dossier_cron and revenue_comp_cron
    # are loaded directly into the gateway via cron_supervisor, so their
    # imports need to resolve in this venv (not just in the agent sandbox).
    "psycopg2-binary>=2.9.9",
    "google-api-python-client>=2.150.0",
    # mem0 powers long-term fact recall (mem0_injection_middleware,
    # mem0_search in lead_agent/prompt). Without it every model call
    # silently logs an import error AND the agent has no long-term
    # memory — leading to slower responses and re-derived context.
    "mem0ai>=0.1.0",
    # mem0's HuggingFace embedder needs sentence-transformers. Without it
    # mem0 initializes but every injection fails on the embedder load.
    "sentence-transformers>=2.7.0",
    # Borrowing-base report crons (report_scheduler_cron loads build_us,
    # build_mx, build_portfolio_report in-process via cron_supervisor).
    # pandas pulls these transitively; without explicit declaration
    # 'uv sync' prunes them (notably python-dateutil), breaking the daily
    # US and MX borrowing-base builds.
    "pandas>=2.2.0",
    "python-dateutil>=2.9.0",
    "openpyxl>=3.1.5",
    "xlsxwriter>=3.2.0",
]

[dependency-groups]
dev = ["pytest>=8.0.0", "ruff>=0.14.11"]

[tool.uv.workspace]
members = ["packages/harness"]

[tool.uv.sources]
deerflow-harness = { workspace = true }
